--- a/login-page.html
+++ b/login-page.html
@@ -109,13 +109,57 @@
         </div>
         <div class="input-group">
             <i class="fa-solid fa-key"></i>
-            <input type="text" id="otp" placeholder=" " required>
-            <label for="otp">OTP</label>
+            <input type="password" id="otp" placeholder=" " required>
+            <label for="otp">Password</label>
         </div>
         <button class="login-btn">Login</button>
     </div>
-    <script src="script.js">
-    
+    <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+    const loginBtn = document.querySelector(".login-btn");
+
+    loginBtn.addEventListener("click", function () {
+        const phone = document.getElementById("phone").value.trim();
+        const password = document.getElementById("otp").value.trim();
+
+        if (!phone || !password) {
+            alert("Please enter both phone number and password.");
+            return;
+        }
+
+        const loginData = {
+            identifier: phone,  // Matches backend key
+            password: password
+        };
+
+        fetch("http://localhost:8081/auth/login", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify(loginData)
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.accessToken) {
+                // Store tokens in local storage
+                localStorage.setItem("accessToken", data.accessToken);
+                localStorage.setItem("refreshToken", data.refreshToken);
+                
+                alert("Login successful!");
+                window.location.href = "index.html"; // Redirect to user dashboard
+            } else {
+                alert("Invalid phone number or password.");
+            }
+        })
+        .catch(error => {
+            console.error("Error:", error);
+            alert("Login failed. Please try again.");
+        });
+    });
+});
+
     </script>
 </body>
 </html>
