--- a/profile.html
+++ b/profile.html
@@ -123,9 +123,7 @@
                 <div class="card text-center">
                     <h5>Recharge History</h5>
                     <ul class="list-group">
-                        <li class="list-group-item">₹599 - 28 Days - 15 Feb 2025</li>
-                        <li class="list-group-item">₹999 - 35 Days - 10 Jan 2025</li>
-                        <li class="list-group-item">₹799 - 30 Days - 5 Dec 2024</li>
+                        
                     </ul>
                     <button class="btn btn-custom mt-3">See Full History</button>
                 </div>
@@ -145,6 +143,44 @@
             document.getElementById("edit-btn").classList.remove("d-none");
             document.getElementById("save-btn").classList.add("d-none");
         });
+        function showRechargeHistory(phoneNumber, name) {
+    customerName.textContent = name;
+    customerMobile.textContent = phoneNumber;
+
+    const historyList = document.querySelector(".list-group"); // Selects the list inside the card
+    historyList.innerHTML = "<li class='list-group-item text-center'>Loading...</li>"; // Show loading text
+
+    fetch(`http://localhost:8081/api/payment/recharge-history/${phoneNumber}`, {
+        method: "GET",
+        headers: {
+            "Authorization": "Bearer " + localStorage.getItem("accessToken")
+        }
+    })
+    .then(response => response.json())
+    .then(history => {
+        historyList.innerHTML = ""; // Clear previous data
+
+        if (!history || history.length === 0) {
+            historyList.innerHTML = "<li class='list-group-item text-center text-danger'>No Recharge History Found</li>";
+            return;
+        }
+
+        history.forEach(entry => {
+            const listItem = document.createElement("li");
+            listItem.className = "list-group-item";
+            listItem.innerHTML = `
+                <strong>${entry.plan?.planName ?? "Unknown Plan"}</strong> - ₹${entry.amount ?? "0"}
+                <br><small>${entry.rechargeDate ? new Date(entry.rechargeDate).toLocaleDateString() : "N/A"}</small>
+            `;
+            historyList.appendChild(listItem);
+        });
+    })
+    .catch(error => {
+        console.error("Error fetching recharge history:", error);
+        historyList.innerHTML = "<li class='list-group-item text-center text-danger'>Failed to load history</li>";
+    });
+}
+
     </script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
