--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <section id="home">
         <header >
   <!-- Logo (No Blur) -->
-  <div class="logo">Mobi-Comm</div>
+  <div class="logo">
+    <img src="/assets/imges/mobicomm-logo.png" alt="" width="50%">
+  </div>
 
     <!-- Glass Navbar -->
     <div class="navbar-container">
