--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
     <section id="home">
         <header >
   <!-- Logo (No Blur) -->
-  <div class="logo">Mobi-Comm</div>
+  <div class="logo">
+    <img src="/assets/imges/mobicomm-logo.png" alt="" width="50%">
+  </div>
 
   <div class="navbar-container">
     <nav class="navbar navbar-expand-lg glass-navbar" id="dynamicNavbar">
